crates/cli/tests/snapshots/golden__gemini_render.snap
---
source: tests/golden.rs
expression: out
---
{
  "mcpServers": {
    "kibana": {
      "httpUrl": "https://kibana-mcp.example.com/mcp",
      "headers": {
        "Authorization": "Bearer kib-secret"
      }
    },
    "github": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-github"
      ],
      "env": {
        "GITHUB_TOKEN": "ghp-secret"
      }
    }
  }
}
